Should've fixed the scrollbar-on-member-description issues. JQuerified the grayscale effects

--- a/_layout/css/elements.css
+++ b/_layout/css/elements.css
@@ -1274,28 +1274,41 @@
 				box-sizing: border-box;
 		margin-bottom: 25px;
 		background-color: #f6f6f6;
-		height:82px;
+		height:72px;
 		/*padding-bottom: 120px;			*/
 	}
 	
 	.team-member-description-inner {
 		overflow-y: auto;
 		height: 100%;
-		padding: 15px;
+		display:table;
 	}
 	
 	.team-member-description h3 {
-		margin-bottom: 18px;
-		line-height:18px;
+		margin: auto;
+		line-height:16px;
 		font-weight: 500;
 		text-transform: uppercase; 
 		font-size: 14px;
 	}
 	
 	.team-member-description p {
+		margin: auto;
 		font-size: 12px;
-		line-height:16px;
+		line-height:14px;
 	}
+
+	.team-member-name, .team-member-title{
+		display: table-row;
+	}
+	.team-member-name-inner, .team-member-title-inner{
+		display: table-cell;
+		width:180px;
+		height:36px;
+		vertical-align: middle;
+		padding:0 10px;
+	}
+
 
 	.team-member .social-media {
 		position: absolute;
@@ -1309,7 +1322,7 @@
 		display: inline-block;
 	}
 	
-	.team-member-pic {
+/*	.team-member-pic {
 		-webkit-filter: grayscale(100%);
 		filter: grayscale(100%);
 		filter: gray;
@@ -1321,7 +1334,7 @@
 		-webkit-filter: grayscale(0%);
 		filter: grayscale(0%);
 		filter: none;
-	}
+	}*/
 
 	/*@media (min-width: 768px) and (max-width: 979px) {*/
 	@media (max-width: 650px) {
@@ -1329,26 +1342,25 @@
 		.team-member { width: 50%; }
 		
 	}
-	@media (max-width: 900px) {
 		
-		.team-member-description h3 { 
-			/*font-size: 13px;*/
-			line-height: 16px;
-		}
+	.team-member-description h3 { 
+		/*font-size: 13px;*/
+		line-height: 16px;
+	}
 
-		.team-member-description p { 
-			/*font-size: 11px; */
-			line-height: 14px;
-		}
-
+	.team-member-description p { 
+		/*font-size: 11px; */
+		line-height: 14px;
+	}
+/*
 		.team-member-description-inner {
 			padding:12px;
-		}
-		.team-member-description h3 {
+		}*/
+
+		/*.team-member-description h3 {
 			margin-bottom: 3px;
-		}
+		}*/
 		
-	}
 	@media (min-width: 585px) and (max-width: 650px) {
 		.team-row {
 			margin-left: 60px;
@@ -1359,7 +1371,7 @@
 			margin-left: 30px;
 		}
 	}
-	@media (min-width: 510px) and (max-width: 650px) {
+/*	@media (min-width: 510px) and (max-width: 650px) {
 		.team-member-description h3 {
 			margin-top: 6px;
 			margin-bottom: 18px;
@@ -1376,7 +1388,7 @@
 			font-size: 11px; 
 			line-height: 12px;
 		}
-	}
+	}*/
 	/*
 	@media (max-width: 767px) {
 		
